Added ability to create new workspaces
